--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,17 +7,21 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
         crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/style.css">
     <title>StoryBooks</title>
 </head>
 <body>
     {{> _header}}
+    {{#if user}}
+        {{> _add-btn}}
+    {{/if}}
     <main>
         <div class="container">
             {{{body}}}
         </div>
     </main>
     
-    
+    {{> _footer}}
 
     <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
         crossorigin="anonymous">
