--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -27,9 +27,21 @@
         crossorigin="anonymous">
         </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+    <script src="https://cdn.ckeditor.com/ckeditor5/11.2.0/classic/ckeditor.js"></script>
     <script>
         $(document).ready(() => {
             $('.button-collapse').sideNav();
+            /* formulario */ 
+            $('select').material_select(); 
+
+            ClassicEditor
+                .create(document.querySelector('#editor'))
+                .then( editor => {
+                    console.log(editor);
+                })
+                .catch(error => {
+                    console.error(error); 
+                })
         });
     </script>
 </body>
