--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,3 +15,15 @@ main {
 footer {
     margin-top: 20px; 
 }
+
+.story-text {
+    height: 140px; 
+}
+
+span.dash-status {
+    text-transform: capitalize; 
+}
+
+#delete-form {
+    display: inline; 
+}
