--- a/views/index/dashboard.handlebars
+++ b/views/index/dashboard.handlebars
@@ -1,2 +1,36 @@
 <h1>Welcome {{user.firstName}}</h1>
 <h4>Your Stories</h4>
+
+{{#if stories}}
+    <table class="striped">
+        <thead>
+            <tr>
+                <th>Title</th>
+                <th>Date</th>
+                <th>Status</th>
+                <th>Options</th>
+            </tr>
+        </thead>
+        <tbody>
+            {{#each stories}}
+            <tr>
+                <td><a href="/stories/single/{{_id}}">{{title}}</a></td>
+                <td>{{formatDate date "MMMM Do YYYY"}}</td>
+                <td><span class="dash-status">{{status}}</span></td>
+                <td>
+                    <a href="/stories/edit/{{_id}}" class="btn left-align"><i class="fas fa-pencil-alt"></i> Edit</a>
+                    <form action="/stories/{{_id}}?_method=DELETE" method="POST" id="delete-form">
+                        <input type="hidden" name="_method" value="DELETE">
+                        <button type="submit" class="btn red"><i class="fas fa-trash"></i> Delete</button>
+                    </form>
+                </td>
+            </tr>
+
+
+            {{/each}}
+        </tbody>
+    </table>
+
+{{else}} 
+    <p>You have not created any stories yet</p>
+{{/if}}
