--- a/views/stories/edit.handlebars
+++ b/views/stories/edit.handlebars
@@ -1,1 +1,47 @@
-<h1>Edit Stories</h1>
+<h1>Add Story</h1>
+
+<div class="row">
+    <form action="/stories/{{story.id}}?_method=PUT" class="col s12" method="POST">
+        <input type="hidden" name="_method" value="PUT">
+        <div class="row">
+            <div class="input-field">
+                <input type="text" name="title" value="{{story.title}}">
+                <label for="title">Title</label>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="input-field col s12">
+                <select name="status">
+                    {{#select story.status}}
+                    <option value="public">Public</option>
+                    <option value="private">Private</option>
+                    <option value="unpublished">Unpublished</option>
+                    {{/select}}
+                </select>
+                <label for="status">Status</label>
+            </div>
+        </div>
+
+        <div class="row">
+            <p>
+                {{#if story.allowComments}}
+                    <input type="checkbox" name="allowComments" class="filled-in" id="filled-in-box" checked="checked">
+                {{else}}
+                <input type="checkbox" name="allowComments" class="filled-in" id="filled-in-box">
+                {{/if}}
+                <label for="filled-in-box">Allow Comments</label>
+            </p>
+        </div>
+
+        <div class="row">
+            <div class="input-field">
+                <h5>Tell Us Your Story: </h5>
+                <textarea name="body" id="editor">{{story.body}}</textarea>
+            </div>
+        </div>
+
+        <input type="submit" value="Edit" class="btn">
+    </form>
+
+</div>
