--- a/views/stories/index.handlebars
+++ b/views/stories/index.handlebars
@@ -1,1 +1,32 @@
 <h1>Index Stories</h1>
+<div class="row">
+    {{#each stories}}
+        <div class="col s12 m4">
+            <div class="card">
+                <div class="card-image">
+                    <a href="/stories/edit/{{_id}}" class="btn-floating halfway-fab red">
+                        <i class="fas fa-pencil-alt"></i>
+                    </a>
+                </div>
+                <div class="card-content center-align">
+                    <h5>{{title}}</h5>
+                    <p class="story-text">{{stripTags (truncate body 150)}}</p>
+                    <!-- ver por qué es importante colocar tres corchetes y no dos en algunos casos -->
+                    <!-- de esta manera se colocan dos helpers en un campo --> 
+                    <br>
+                    <div class="chip">
+                        <img src="{{user.image}}" alt="{{user.firstName}}">
+                        {{user.firstName}}
+                    </div>
+                </div>
+                <div class="card-action center-align">
+                    <a href="/stories/single/{{_id}}" class="btn grey">Read More</a>
+                </div>
+            </div>
+        </div>
+    {{else}}
+        <p>No stories found!</p>
+    {{/each}}
+
+
+</div>
