--- a/views/stories/single.handlebars
+++ b/views/stories/single.handlebars
@@ -1,1 +1,29 @@
-<h1>Single Story</h1>
+<div class="row">
+    <div class="col s12 m8">
+        <h3>{{story.title}}</h3>
+        <div class="card story">
+            <div class="card-content">
+                <span class="card-title">
+                    {{formatDate story.date 'MMMM Do YYYY'}}
+                </span>
+                {{{story.body}}}
+                <!-- aquí sí se ponen los tres corchetes porque queremos que se respete el formato del editor de texto CK -->
+            </div>
+        </div>
+    </div>
+    <div class="col s12 m4">
+        <div class="card center-align">
+            <div class="card-content">
+                <span class="card-title">
+                    {{story.user.firstName}} {{story.user.lastName}}
+                </span>
+                <img src="{{story.user.image}}" class="circle responsive-img" alt="{{story.user.firstName}}">
+            </div>
+            <div class="card-action">
+                <a href="/stories/user/{{story.user.id}}" class="btn red">More from the author</a>
+            </div>
+        </div>
+    </div>
+
+
+</div>
