--- a/views/stories/index.handlebars
+++ b/views/stories/index.handlebars
@@ -4,9 +4,15 @@
         <div class="col s12 m4">
             <div class="card">
                 <div class="card-image">
-                    <a href="/stories/edit/{{_id}}" class="btn-floating halfway-fab red">
-                        <i class="fas fa-pencil-alt"></i>
-                    </a>
+                    {{#if user}}
+                        <!-- 
+                            se usan los 3 corchetes porque la función o helper regresaba un html 
+                            Asimismo, se usan los dos puntos para salir del loop y retomar el loop anterior
+                            en esta ocasión no se pone true porque ya se declaró
+                        --> 
+                        {{{editIcon user.id ../user.id  _id }}}
+                    
+                    {{/if}}
                 </div>
                 <div class="card-content center-align">
                     <h5>{{title}}</h5>
@@ -16,7 +22,7 @@
                     <br>
                     <div class="chip">
                         <img src="{{user.image}}" alt="{{user.firstName}}">
-                        {{user.firstName}}
+                        <a href="/stories/user/{{user.id}}">{{user.firstName}}</a>   
                     </div>
                 </div>
                 <div class="card-action center-align">
