--- a/views/stories/single.handlebars
+++ b/views/stories/single.handlebars
@@ -1,6 +1,11 @@
 <div class="row">
     <div class="col s12 m8">
-        <h3>{{story.title}}</h3>
+        <h3>
+            {{story.title}}
+            <small>
+                {{{editIcon story.user.id user.id story.id false}}}
+            </small>
+        </h3>
         <div class="card story">
             <div class="card-content">
                 <span class="card-title">
@@ -10,6 +15,40 @@
                 <!-- aquí sí se ponen los tres corchetes porque queremos que se respete el formato del editor de texto CK -->
             </div>
         </div>
+        {{#if story.allowComments}}
+            <div class="card">
+                <div class="card-content">
+                    <span class="card-title">Comments</span>
+                    {{#if user}}
+                        <form action="/stories/comment/{{story._id}}" method="POST">
+                            <div class="input-field">
+                                <textarea name="comment" id="comment" class="materialize-textarea"></textarea>
+                                <label for="comment">Add Comment</label>
+                            </div>
+                            <input type="submit" class="btn red" value="Comment">
+
+                        </form>
+                    {{else}}
+                        <p><a href="/auth/google">Please login to leave a comment</a></p>
+                    {{/if}}
+                </div>
+            </div>
+
+            {{#each story.comments}}
+                <div class="card">
+                    <div class="card-content">
+                        <h5>{{commentBody}}</h5>
+                        <div class="chip">
+                            <img src="{{commentUser.image}}" alt="{{commentUser.firstName}}">
+                            <a href="/stories/user/{{commentUser.id}}">{{commentUser.firstName}}</a> 
+                        </div>
+                        <br>
+                        <small>Posted: {{formatDate commentDate 'MMMM Do YYYY'}}</small>
+                    </div>
+                </div>
+            {{/each}}
+
+        {{/if}}
     </div>
     <div class="col s12 m4">
         <div class="card center-align">
